# pikvm-auto

./: .copier-answers.yml  .env.example  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dev  duties.py  justfile  pyproject.toml  zensical.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: release.yaml  release.yml
ansible/: .ansible-lint  README.md  galaxy.yml
ansible/meta/: runtime.yml
ansible/plugins/doc_fragments/: pikvm_auth.py
ansible/plugins/module_utils/: pikvm_client.py
ansible/plugins/modules/: pikvm_atx.py  pikvm_hid.py  pikvm_info.py  pikvm_msd.py  pikvm_screen_wait.py  pikvm_snapshot.py
ansible/tests/sanity/: ignore-2.17.txt
ansible/tests/unit/plugins/module_utils/: test_pikvm_client.py
ansible/tests/unit/plugins/modules/: test_pikvm_atx.py  test_pikvm_info.py  test_pikvm_msd.py  test_pikvm_snapshot.py
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
just/: ansible.just  dev.just  pikvm.just
scripts/: gen_credits.py
src/pikvm_auto/: __init__.py  __main__.py
src/pikvm_auto/_internal/: cli.py  config.py  debug.py
src/pikvm_auto/_internal/commands/: hid.py  info.py  screenshot.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_hid.py  test_info.py  test_screenshot.py
