[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pikvm-auto"
description = "pikvmautomation, library, and ansible modules"
authors = [{name = "KettleOfKetchup", email = "kettleofketchup@gmail.com"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pikvm-lib>=0.5.0",
    "pydantic-settings>=2.13.1",
]

[project.urls]
Homepage = "https://kettleofketchup.github.io/pikvm-auto"
Documentation = "https://kettleofketchup.github.io/pikvm-auto"
Changelog = "https://kettleofketchup.github.io/pikvm-auto/changelog"
Repository = "https://github.com/kettleofketchup/pikvm-auto"
Issues = "https://github.com/kettleofketchup/pikvm-auto/issues"
Discussions = "https://github.com/kettleofketchup/pikvm-auto/discussions"
Gitter = "https://gitter.im/pikvm-auto/community"
Funding = "https://github.com/sponsors/kettleofketchup"

[project.scripts]
pikvm-auto = "pikvm_auto._internal.cli:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "zensical.toml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "griffe>=2.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "ruff>=0.4",
    "ty>=0.0.14",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
 docs = [
    "ghp-import>=2.1",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
    "zensical>=0.0.21",
]
dev = [
    "ansible-core>=2.17.14",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
